--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -85,63 +85,28 @@
     <section class="pb-20 max-w-7xl mx-auto px-6">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-12">
             
-            <div class="case-card" data-aos="fade-up">
-                <div class="mini-gallery" id="gal-tco">
-                    <div class="gallery-wrapper" id="wrapper-tco">
-                        <a href="https://images.unsplash.com/photo-1551288049-bb1c003f27a5?q=80&w=2000" class="glightbox gallery-item" data-gallery="tco">
-                            <img src="https://images.unsplash.com/photo-1551288049-bb1c003f27a5?w=800" alt="Dashboard Financeiro">
-                            <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
-                        </a>
-                        <a href="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=2000" class="glightbox gallery-item" data-gallery="tco">
-                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800" alt="Análise de Dados">
-                            <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
-                        </a>
-                    </div>
-                    <div class="gallery-nav">
-                        <div class="nav-dot active" onclick="moveGallery('tco', 0)"></div>
-                        <div class="nav-dot" onclick="moveGallery('tco', 1)"></div>
-                    </div>
-                </div>
-                <div class="p-6 md:p-8">
-                    <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
-                        <span class="bg-emerald-50 text-brand-green text-[10px] font-bold px-3 py-1 rounded-full">Financeiro</span>
-                    </div>
-                    <p class="text-slate-600 text-sm mb-6 leading-relaxed">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores, distribuição por locais, controlo de quilometragem, arquivo de documentação ou até mesmo alertas para a gestão do dia-a-dia. Desenvolvemos soluções à medida das suas necessidades, de acordo com o seu contexto e trazemos know-how que somará à proposta de valor.</p>
-                    <div class="pt-4 border-t border-slate-50 text-brand-green font-bold text-xs md:text-sm">
-                        <i class="fa-solid fa-chart-line mr-2"></i> Eficiência e Organização à distância de um clique.
-                    </div>
-                </div>
-            </div>
-
-            <div class="case-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="mini-gallery" id="gal-xev">
-                    <div class="gallery-wrapper" id="wrapper-xev">
-                        <a href="img/FleetManager - Grafismo_EDITED.png" class="glightbox gallery-item" data-gallery="xev">
-                            <img src="https://images.unsplash.com/photo-1593941707882-a5bba14938c7?w=800" alt="Interface Carregamento">
-                            <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
-                        </a>
-                        <a href="https://images.unsplash.com/photo-1563986768609-322da13575f3?q=80&w=2000" class="glightbox gallery-item" data-gallery="xev">
-                            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?w=800" alt="App Mobile">
-                            <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
-                        </a>
-                    </div>
-                    <div class="gallery-nav">
-                        <div class="nav-dot active" onclick="moveGallery('xev', 0)"></div>
-                        <div class="nav-dot" onclick="moveGallery('xev', 1)"></div>
-                    </div>
-                </div>
-                <div class="p-6 md:p-8">
-                    <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Planeador xEV Custom</h3>
-                        <span class="bg-emerald-50 text-brand-green text-[10px] font-bold px-3 py-1 rounded-full">EV Fleet</span>
-                    </div>
-                    <p class="text-slate-600 text-sm mb-6 leading-relaxed">Algoritmo de decisão para transição energética e localização de postos de carga.</p>
-                    <div class="pt-4 border-t border-slate-50 text-brand-green font-bold text-xs md:text-sm">
-                        <i class="fa-solid fa-bolt mr-2"></i> Otimização de 20% em hardware.
-                    </div>
-                </div>
-            </div>
+<div class="case-card" data-aos="fade-up">
+    <div class="mini-gallery" id="gal-tco">
+        <div class="gallery-wrapper" id="wrapper-tco">
+            <a href="img/dashboard-full.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Gestão centralizada de frotas">
+                <img src="img/dashboard-thumb.jpg" alt="Dashboard FleetWise">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+            <a href="img/relatorio-full.png" class="glightbox gallery-item" data-gallery="tco">
+                <img src="img/relatorio-thumb.jpg" alt="Relatórios">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+        </div>
+        <div class="gallery-nav">
+            <div class="nav-dot active" onclick="moveGallery('tco', 0)"></div>
+            <div class="nav-dot" onclick="moveGallery('tco', 1)"></div>
+        </div>
+    </div>
+    <div class="p-6 md:p-8">
+        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
+        <p class="text-slate-600 text-sm mt-2 mb-6">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores e controlo de quilometragem.</p>
+    </div>
+</div>
 
         </div>
     </section>
