--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -89,7 +89,7 @@
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
             <a href="img/dashboard-full.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Gestão centralizada de frotas">
-                <img src="img/dashboard-thumb.jpg" alt="Dashboard FleetWise">
+                <img src="img/fleetmanager-grafismo_edit.png" alt="Dashboard FleetWise">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
             <a href="img/relatorio-full.png" class="glightbox gallery-item" data-gallery="tco">
@@ -104,7 +104,7 @@
     </div>
     <div class="p-6 md:p-8">
         <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
-        <p class="text-slate-600 text-sm mt-2 mb-6">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores e controlo de quilometragem.</p>
+        <p class="text-slate-600 text-sm mt-2 mb-6">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores, distribuição por locais, controlo de quilometragem, arquivo de documentação ou até mesmo alertas para a gestão do dia-a-dia. Desenvolvemos soluções à medida das suas necessidades, de acordo com o seu contexto e trazemos know-how que somará à proposta de valor.</p>
     </div>
 </div>
 
