--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -88,12 +88,12 @@
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="img/dashboard-full.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Gestão centralizada de frotas">
-                <img src="img/fleetmanager-grafismo_edit.png" alt="Dashboard FleetWise">
+            <a href="img/fleetmanager-grafismo_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Gestão centralizada de frotas">
+                <img src="img/fleetmanager-grafismo_edit.png" alt="Plataforma de Gestão de Viaturas">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/relatorio-full.png" class="glightbox gallery-item" data-gallery="tco">
-                <img src="img/relatorio-thumb.jpg" alt="Relatórios">
+            <a href="img/fleetmanager-feed_edit.png" class="glightbox gallery-item" data-gallery="tco">
+                <img src="img/fleetmanager-feed_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
         </div>
