--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -96,6 +96,14 @@
                 <img src="img/fleetmanager-feed_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
+            <a href="img/fleetmanager-viaturas_edit.png" class="glightbox gallery-item" data-gallery="tco">
+                <img src="img/fleetmanager-viaturas_edit.png" alt="Relatórios">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+            <a href="img/fleetmanager-login.png" class="glightbox gallery-item" data-gallery="tco">
+                <img src="img/fleetmanager-login.png" alt="Relatórios">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
         </div>
         <div class="gallery-nav">
             <div class="nav-dot active" onclick="moveGallery('tco', 0)"></div>
