--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -88,7 +88,7 @@
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="img/fleetmanager-login.png" class="glightbox gallery-item" data-gallery="tco">
+            <a href="img/fleetmanager-login_edit.png" class="glightbox gallery-item" data-gallery="tco">
                 <img src="img/fleetmanager-login.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
