--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -88,19 +88,19 @@
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="img/fleetmanager-login.png" class="glightbox gallery-item" data-gallery="tco">
+            <a href="img/fleetmanager-login.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Login da Plataforma; description: Múltiplos utilizadores com diferentes permissões.>
                 <img src="img/fleetmanager-login_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/fleetmanager-feed_edit.png" class="glightbox gallery-item" data-gallery="tco">
+            <a href="img/fleetmanager-feed_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Feed de Atividade; description: Oganizável, Exportável e Visualmente apelativo.>
                 <img src="img/fleetmanager-feed_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/fleetmanager-grafismo_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Gestão centralizada de frotas">
+            <a href="img/fleetmanager-grafismo_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Dashboard de Controlo; description: Organização Visual da utilização de viaturas.">
                 <img src="img/fleetmanager-grafismo_edit.png" alt="Plataforma de Gestão de Viaturas">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/fleetmanager-viaturas_edit.png" class="glightbox gallery-item" data-gallery="tco">
+            <a href="img/fleetmanager-viaturas_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Gestão de Viaturas; description: Dashboard de controlo da frota existente.>
                 <img src="img/fleetmanager-viaturas_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
