--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -85,7 +85,7 @@
     <section class="pb-20 max-w-7xl mx-auto px-6">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-12">
 
-//Fleet Manager
+
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
@@ -117,7 +117,7 @@
     </div>
 </div>
 
-//AI Trading Lab
+
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
@@ -144,12 +144,11 @@
         </div>
     </div>
     <div class="p-6 md:p-8">
-        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
-        <p class="text-slate-600 text-sm mt-2 mb-6">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores, distribuição por locais, controlo de quilometragem, arquivo de documentação ou até mesmo alertas para a gestão do dia-a-dia. Desenvolvemos soluções à medida das suas necessidades, de acordo com o seu contexto e trazemos know-how que somará à proposta de valor.</p>
+        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Trade com Bot AI</h3>
+        <p class="text-slate-600 text-sm mt-2 mb-6">*TEXTO*</p>
     </div>
 </div>
 
-            XXX
 
         </div>
     </section>
