--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -114,6 +115,38 @@
     <div class="p-6 md:p-8">
         <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
         <p class="text-slate-600 text-sm mt-2 mb-6">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores, distribuição por locais, controlo de quilometragem, arquivo de documentação ou até mesmo alertas para a gestão do dia-a-dia. Desenvolvemos soluções à medida das suas necessidades, de acordo com o seu contexto e trazemos know-how que somará à proposta de valor.</p>
+    </div>
+</div>
+
+
+<div class="case-card" data-aos="fade-up">
+    <div class="mini-gallery" id="gal-tco">
+        <div class="gallery-wrapper" id="wrapper-tco">
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+                <img src="*">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+                <img src="*" alt="C">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+                <img src="*" alt="Plataforma de Trade com Bot AI">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+                <img src="*">
+                <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
+            </a>
+        </div>
+        <div class="gallery-nav">
+            <div class="nav-dot active" onclick="moveGallery('tco', 0)"></div>
+            <div class="nav-dot" onclick="moveGallery('tco', 1)"></div>
+        </div>
+    </div>
+    <div class="p-6 md:p-8">
+        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Trade com Bot AI</h3>
+        <p class="text-slate-600 text-sm mt-2 mb-6">*TEXTO*</p>
     </div>
 </div>
 
