--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -90,7 +90,7 @@
 <div class="case-card" data-aos="fade-up">
     <div class="mini-gallery" id="gal-tco">
         <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="img/fleetmanager-login.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Login da Plataforma; description: Múltiplos utilizadores com diferentes permissões.>
+            <a href="img/fleetmanager-login_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Login da Plataforma; description: Múltiplos utilizadores com diferentes permissões.>
                 <img src="img/fleetmanager-login_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
