--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -88,13 +88,13 @@
 
 
 <div class="case-card" data-aos="fade-up">
-    <div class="mini-gallery" id="gal-tco">
-        <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="img/fleetmanager-login_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Login da Plataforma; description: Múltiplos utilizadores com diferentes permissões.>
+    <div class="mini-gallery" id="gal-fleetmanager">
+        <div class="gallery-wrapper" id="wrapper-fleetmanager">
+            <a href="img/fleetmanager-login_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Login da Plataforma; description: Múltiplos utilizadores com diferentes permissões.">
                 <img src="img/fleetmanager-login_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/fleetmanager-feed_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Feed de Atividade; description: Oganizável, Exportável e Visualmente apelativo.>
+            <a href="img/fleetmanager-feed_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Feed de Atividade; description: Oganizável, Exportável e Visualmente apelativo.">
                 <img src="img/fleetmanager-feed_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
@@ -102,7 +102,7 @@
                 <img src="img/fleetmanager-grafismo_edit.png" alt="Plataforma de Gestão de Viaturas">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="img/fleetmanager-viaturas_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Gestão de Viaturas; description: Dashboard de controlo da frota existente.>
+            <a href="img/fleetmanager-viaturas_edit.png" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Gestão de Viaturas; description: Dashboard de controlo da frota existente.">
                 <img src="img/fleetmanager-viaturas_edit.png" alt="Relatórios">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
@@ -120,21 +120,21 @@
 
 
 <div class="case-card" data-aos="fade-up">
-    <div class="mini-gallery" id="gal-tco">
-        <div class="gallery-wrapper" id="wrapper-tco">
-            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+    <div class="mini-gallery" id="gal-trade">
+        <div class="gallery-wrapper" id="wrapper-trde">
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.">
                 <img src="*">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.">
                 <img src="*" alt="C">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.">
                 <img src="*" alt="Plataforma de Trade com Bot AI">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
-            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.>
+            <a href="*" class="glightbox gallery-item" data-gallery="tco" data-glightbox="title: Título; description: Descrição.">
                 <img src="*">
                 <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
             </a>
