--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <li>Acompanhamento flexível</li>
                     </ul>
                 </div>
-                <a href="TCO_simulator_blurry.html" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition shadow-lg text-center">Simule já!</a>                
+                <a href="TCO_simulator.html" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition shadow-lg text-center">Simule já!</a>                
             </div>
             
             <div data-aos="fade-up" data-aos-delay="200">
